kubernetes/apps/storage/synology/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology
  namespace: storage
  annotations:
    external-dns.home.arpa/enabled: "true"
    auth.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:nas"
    hajimari.io/group: "Storage"
spec:
  rules:
    - host: &host "jericho.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synology
                port: 5000
  tls:
    - hosts:
        - *host
      secretName: "jericho-tls"
